# vlibras-gen

./: .env.example  .gitignore  Dockerfile.bridge  README.md  bridge.py  compose.yaml  config.py  phrases.txt  pyproject.toml  rabbitmq-definitions.json  rabbitmq.conf  renderer.py  vlibras_gen.py
